--- a/Power_Injection.ipynb
+++ b/Power_Injection.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,155 +84,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 448,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Bus_type</th>\n",
-       "      <th>Pg</th>\n",
-       "      <th>Qg</th>\n",
-       "      <th>Pl</th>\n",
-       "      <th>Ql</th>\n",
-       "      <th>Vmag</th>\n",
-       "      <th>Delta</th>\n",
-       "      <th>Qmin</th>\n",
-       "      <th>Qmax</th>\n",
-       "      <th>P_sh</th>\n",
-       "      <th>Q_sh</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Bus_No</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>0.5282</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.5635</td>\n",
-       "      <td>0.114718</td>\n",
-       "      <td>1.035</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.5</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>-0.0353</td>\n",
-       "      <td>-0.114718</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.5041</td>\n",
-       "      <td>0.103934</td>\n",
-       "      <td>1.035</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.5</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>-0.5041</td>\n",
-       "      <td>-0.103934</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.9342</td>\n",
-       "      <td>0.192128</td>\n",
-       "      <td>1.000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.9342</td>\n",
-       "      <td>-0.192128</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.3855</td>\n",
-       "      <td>0.078077</td>\n",
-       "      <td>1.000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.3855</td>\n",
-       "      <td>-0.078077</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.3707</td>\n",
-       "      <td>0.073113</td>\n",
-       "      <td>1.000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.3707</td>\n",
-       "      <td>-0.073113</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        Bus_type      Pg   Qg      Pl        Ql   Vmag  Delta  Qmin  Qmax  \\\n",
-       "Bus_No                                                                      \n",
-       "1              2  0.5282  0.0  0.5635  0.114718  1.035    0.0  -0.5   0.8   \n",
-       "2              1  0.0000  0.0  0.5041  0.103934  1.035    0.0  -0.5   0.8   \n",
-       "3              1  0.0000  0.0  0.9342  0.192128  1.000    0.0   0.0   0.0   \n",
-       "4              1  0.0000  0.0  0.3855  0.078077  1.000    0.0   0.0   0.0   \n",
-       "5              1  0.0000  0.0  0.3707  0.073113  1.000    0.0   0.0   0.0   \n",
-       "\n",
-       "          P_sh      Q_sh  \n",
-       "Bus_No                    \n",
-       "1      -0.0353 -0.114718  \n",
-       "2      -0.5041 -0.103934  \n",
-       "3      -0.9342 -0.192128  \n",
-       "4      -0.3855 -0.078077  \n",
-       "5      -0.3707 -0.073113  "
-      ]
-     },
-     "execution_count": 448,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Data from Bus_data\n",
     "bus_no = bus_data[:, 0].astype(int)\n",
@@ -283,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 449,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 450,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 451,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 452,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,17 +263,18 @@
     "        DF = np.concatenate((d_p.values, d_q.values))\n",
     "        DX = np.linalg.solve(J, DF) \n",
     "        #print( b_data_.loc[d_q.index, 'Vmag'])\n",
-    "        b_data_.loc[d_p.index, 'Delta'] = b_data_.loc[d_p.index, 'Delta'].values + DX[:d_p.shape[0]]\n",
-    "        b_data_.loc[d_q.index, 'Vmag'] = b_data_.loc[d_q.index, 'Vmag'].values + DX[d_p.shape[0]:]\n",
+    "        \n",
     "        if max(np.abs(DX)) <= tol:\n",
     "            return b_data_\n",
+    "        b_data_.loc[d_p.index, 'Delta'] = b_data_.loc[d_p.index, 'Delta'].values + DX[:d_p.shape[0]]\n",
+    "        b_data_.loc[d_q.index, 'Vmag'] = b_data_.loc[d_q.index, 'Vmag'].values + DX[d_p.shape[0]:]\n",
     "    return \"Value Error\"\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 453,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,27 +284,35 @@
     "    result = N_R(df, iter, tol)\n",
     "    trig = 'yes'\n",
     "    q_df = result.copy(deep = True)\n",
+    "    cond = True\n",
     "    if isinstance(result, pd.DataFrame): #Checking Q Limit\n",
-    "        while trig == 'yes':\n",
+    "        while cond == True:\n",
     "            for k in q_df.index:\n",
-    "                if q_df.loc[k, 'Bus_type'] == 2: #Checking for PV Bus\n",
+    "                if q_df.loc[k, 'Qmax'] != 0: #Checking for PV Bus\n",
     "                    if q_df.loc[k, 'Q_calc'] > q_df.loc[k, 'Qmax']:\n",
     "                        q_df.loc[k, 'Q_calc'] = q_df.loc[k, 'Qmax']\n",
     "                        q_df.loc[k, 'Bus_type'] = 1 # PV becomes PQ\n",
-    "                        trig = 'yes'\n",
+    "                        print(\"Qmax\", k)\n",
+    "                        \n",
     "\n",
     "                    elif q_df.loc[k, 'Q_calc'] < q_df.loc[k, 'Qmin']:\n",
     "                        q_df.loc[k, 'Q_calc'] = q_df.loc[k, 'Qmin']\n",
     "                        q_df.loc[k, 'Bus_type'] = 1 # PV becomes PQ\n",
-    "                        trig = 'yes'\n",
-    "                            \n",
+    "                        print(\"Qmin\", k)\n",
+    "                               \n",
     "                    else:\n",
     "                        q_df.loc[k, 'Bus_type'] = 2 #PV restore\n",
     "                        q_df.loc[k, 'Vmag'] = q_df.loc[k, 'Vmag']\n",
-    "                        trig = 'no'\n",
-    "                        \n",
-    "            if trig =='yes':\n",
-    "                q_df = N_R(df, iter, tol)\n",
+    "                    \n",
+    "            cond =  ((q_df.loc[:, \"Q_calc\"] > q_df.loc[:, \"Qmax\"]) | \n",
+    "                        (q_df.loc[:, \"Q_calc\"] < q_df.loc[:, \"Qmin\"])).any() \n",
+    "            print(cond)  \n",
+    "            if cond == True:\n",
+    "                q_df = N_R(q_df, iter, tol)\n",
+    "                if isinstance(q_df, str):\n",
+    "                    return \"The system is diverged for given number of iteration(While Checking Q Limit)\"\n",
+    "                print(\"Evaluating q_df\")\n",
+    "                q_df.head()\n",
     "\n",
     "    else:\n",
     "        print(\"The system is diverged for given number of iteration\")\n",
@@ -461,16 +324,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 454,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Qmin 13\n",
+      "Qmin 15\n",
+      "Qmin 16\n",
+      "Qmin 38\n",
+      "Qmin 39\n",
+      "Qmin 62\n",
+      "Qmin 63\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "rslt = main(b_data, 15, 0.001)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 455,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The system is diverged for given number of iteration'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rslt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +436,7 @@
        "      <td>0.5635</td>\n",
        "      <td>0.114718</td>\n",
        "      <td>1.035000</td>\n",
-       "      <td>-0.445823</td>\n",
+       "      <td>-0.445673</td>\n",
        "      <td>-0.50</td>\n",
        "      <td>0.80</td>\n",
        "      <td>-0.0353</td>\n",
@@ -555,8 +453,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.5041</td>\n",
        "      <td>0.103934</td>\n",
-       "      <td>1.031568</td>\n",
-       "      <td>-0.451209</td>\n",
+       "      <td>1.031571</td>\n",
+       "      <td>-0.451058</td>\n",
        "      <td>-0.50</td>\n",
        "      <td>0.80</td>\n",
        "      <td>-0.5041</td>\n",
@@ -573,8 +471,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.9342</td>\n",
        "      <td>0.192128</td>\n",
-       "      <td>1.009573</td>\n",
-       "      <td>-0.323547</td>\n",
+       "      <td>1.009587</td>\n",
+       "      <td>-0.323436</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>-0.9342</td>\n",
@@ -591,8 +489,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.3855</td>\n",
        "      <td>0.078077</td>\n",
-       "      <td>1.012804</td>\n",
-       "      <td>-0.431865</td>\n",
+       "      <td>1.012816</td>\n",
+       "      <td>-0.431714</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>-0.3855</td>\n",
@@ -609,8 +507,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.3707</td>\n",
        "      <td>0.073113</td>\n",
-       "      <td>1.014252</td>\n",
-       "      <td>-0.444497</td>\n",
+       "      <td>1.014260</td>\n",
+       "      <td>-0.444342</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>-0.3707</td>\n",
@@ -646,7 +544,7 @@
        "      <td>0.0000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>1.050000</td>\n",
-       "      <td>-0.287643</td>\n",
+       "      <td>-0.287442</td>\n",
        "      <td>-0.50</td>\n",
        "      <td>2.00</td>\n",
        "      <td>4.0000</td>\n",
@@ -664,7 +562,7 @@
        "      <td>0.0000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>1.052093</td>\n",
-       "      <td>-0.298597</td>\n",
+       "      <td>-0.298397</td>\n",
        "      <td>-0.60</td>\n",
        "      <td>0.96</td>\n",
        "      <td>0.0000</td>\n",
@@ -682,7 +580,7 @@
        "      <td>0.0000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>1.050000</td>\n",
-       "      <td>-0.245395</td>\n",
+       "      <td>-0.245243</td>\n",
        "      <td>-1.25</td>\n",
        "      <td>3.10</td>\n",
        "      <td>0.5424</td>\n",
@@ -699,8 +597,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>1.004251</td>\n",
-       "      <td>-0.362441</td>\n",
+       "      <td>1.004296</td>\n",
+       "      <td>-0.362242</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.0000</td>\n",
@@ -717,8 +615,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>1.043169</td>\n",
-       "      <td>-0.305653</td>\n",
+       "      <td>1.043174</td>\n",
+       "      <td>-0.305512</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.0000</td>\n",
@@ -736,17 +634,17 @@
       "text/plain": [
        "        Bus_type      Pg   Qg      Pl        Ql      Vmag     Delta  Qmin  \\\n",
        "Bus_No                                                                      \n",
-       "1              2  0.5282  0.0  0.5635  0.114718  1.035000 -0.445823 -0.50   \n",
-       "2              1  0.0000  0.0  0.5041  0.103934  1.031568 -0.451209 -0.50   \n",
-       "3              1  0.0000  0.0  0.9342  0.192128  1.009573 -0.323547  0.00   \n",
-       "4              1  0.0000  0.0  0.3855  0.078077  1.012804 -0.431865  0.00   \n",
-       "5              1  0.0000  0.0  0.3707  0.073113  1.014252 -0.444497  0.00   \n",
+       "1              2  0.5282  0.0  0.5635  0.114718  1.035000 -0.445673 -0.50   \n",
+       "2              1  0.0000  0.0  0.5041  0.103934  1.031571 -0.451058 -0.50   \n",
+       "3              1  0.0000  0.0  0.9342  0.192128  1.009587 -0.323436  0.00   \n",
+       "4              1  0.0000  0.0  0.3855  0.078077  1.012816 -0.431714  0.00   \n",
+       "5              1  0.0000  0.0  0.3707  0.073113  1.014260 -0.444342  0.00   \n",
        "...          ...     ...  ...     ...       ...       ...       ...   ...   \n",
-       "69             2  4.0000  0.0  0.0000  0.000000  1.050000 -0.287643 -0.50   \n",
-       "70             1  0.0000  0.0  0.0000  0.000000  1.052093 -0.298597 -0.60   \n",
-       "71             2  0.5424  0.0  0.0000  0.000000  1.050000 -0.245395 -1.25   \n",
-       "72             1  0.0000  0.0  0.0000  0.000000  1.004251 -0.362441  0.00   \n",
-       "73             1  0.0000  0.0  0.0000  0.000000  1.043169 -0.305653  0.00   \n",
+       "69             2  4.0000  0.0  0.0000  0.000000  1.050000 -0.287442 -0.50   \n",
+       "70             1  0.0000  0.0  0.0000  0.000000  1.052093 -0.298397 -0.60   \n",
+       "71             2  0.5424  0.0  0.0000  0.000000  1.050000 -0.245243 -1.25   \n",
+       "72             1  0.0000  0.0  0.0000  0.000000  1.004296 -0.362242  0.00   \n",
+       "73             1  0.0000  0.0  0.0000  0.000000  1.043174 -0.305512  0.00   \n",
        "\n",
        "        Qmax    P_sh      Q_sh    P_calc    Q_calc           D_P       D_Q  \n",
        "Bus_No                                                                      \n",
@@ -765,14 +663,21 @@
        "[73 rows x 15 columns]"
       ]
      },
-     "execution_count": 455,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rslt"
+    "N_R(b_data, 15, 0.001)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
