--- a/Fast_Decoupled.ipynb
+++ b/Fast_Decoupled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,8 @@
     "from data import datas\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "\n",
     "\n",
     "#load data and manupulate datas if needed\n",
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,36 +214,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(51, 51)"
+       "'def N_R(df, iter, tol):\\n    \"Function to perform Newton Raphson for solving non linear equations\"\\n    b_data_ = df.copy(deep=True)\\n    for i in range(iter):\\n        D_P, D_Q, J1, J4 = Jacobian(b_data, Y_bus())\\n        del_delta = np.linalg.solve(J1, D_P)\\n        print(max(np.abs(del_delta)))\\n        if max(np.abs(del_delta)) <= tol:\\n            print(\\'aa\\')\\n            pass   \\n        b_data_.loc[D_P.index, \\'Delta\\'] = b_data_.loc[D_P.index, \\'Delta\\'].values + del_delta\\n\\n    for i in range(iter):\\n        D_P, D_Q, J1, J4 = Jacobian(b_data, Y_bus())\\n        del_V = np.linalg.solve(J4, D_Q) \\n        \\n        if max(np.abs(del_V)) <= tol:\\n            return b_data_\\n        b_data_.loc[D_Q.index, \\'Vmag\\'] = b_data_.loc[D_Q.index, \\'Vmag\\'].values + del_V\\n    return \"Value Error\" '"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "def N_R(df, iter, tol):\n",
+    "'''def N_R(df, iter, tol):\n",
     "    \"Function to perform Newton Raphson for solving non linear equations\"\n",
     "    b_data_ = df.copy(deep=True)\n",
     "    for i in range(iter):\n",
@@ -261,84 +262,245 @@
     "        if max(np.abs(del_V)) <= tol:\n",
     "            return b_data_\n",
     "        b_data_.loc[D_Q.index, 'Vmag'] = b_data_.loc[D_Q.index, 'Vmag'].values + del_V\n",
-    "    return \"Value Error\"\n",
+    "    return \"Value Error\" '''\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0230522753039322\n",
-      "1.0230522753039322\n",
-      "1.0230522753039322\n",
-      "1.0230522753039322\n",
-      "1.0230522753039322\n",
-      "1.0230522753039322\n",
-      "1.0230522753039322\n",
-      "1.0230522753039322\n",
-      "1.0230522753039322\n",
-      "1.0230522753039322\n",
-      "1.0230522753039322\n",
-      "1.0230522753039322\n",
-      "1.0230522753039322\n",
-      "1.0230522753039322\n",
-      "1.0230522753039322\n",
-      "1.0230522753039322\n",
-      "1.0230522753039322\n",
-      "1.0230522753039322\n",
-      "1.0230522753039322\n",
-      "1.0230522753039322\n",
-      "1.0230522753039322\n",
-      "1.0230522753039322\n",
-      "1.0230522753039322\n",
-      "1.0230522753039322\n",
-      "1.0230522753039322\n",
-      "1.0230522753039322\n",
-      "1.0230522753039322\n",
-      "1.0230522753039322\n",
-      "1.0230522753039322\n",
-      "1.0230522753039322\n"
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "V:Delta 1.0230522753039322\n",
+      " 0.047203094277807986\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "V:Delta 1.0230522753039322\n",
+      " 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "Delta 1.0230522753039322\n",
+      "V: 0.047203094277807986\n",
+      "Bus_No\n",
+      "1    -32.056712\n",
+      "2    -32.448056\n",
+      "3    -23.004421\n",
+      "4    -30.999661\n",
+      "5    -31.714408\n",
+      "        ...    \n",
+      "69   -29.032261\n",
+      "70   -29.746699\n",
+      "71   -23.715957\n",
+      "72   -32.862568\n",
+      "73   -25.754058\n",
+      "Name: Delta, Length: 73, dtype: float64\n",
+      "Bus_No\n",
+      "1     1.035000\n",
+      "2     1.076187\n",
+      "3     2.200108\n",
+      "4     2.467975\n",
+      "5     2.248638\n",
+      "        ...   \n",
+      "69    1.050000\n",
+      "70    1.188369\n",
+      "71    1.050000\n",
+      "72    1.736205\n",
+      "73    3.312952\n",
+      "Name: Vmag, Length: 73, dtype: float64\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Value Error'"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "N_R(b_data, 30, 0.001)"
+    "import concurrent.futures\n",
+    "\n",
+    "def N_R_P(df, iter, tol):\n",
+    "    b_data_ = df.copy(deep=True)\n",
+    "    for i in range(iter):\n",
+    "        D_P, D_Q, J1, J4 = Jacobian(b_data, Y_bus())\n",
+    "        del_delta = np.linalg.solve(J1, D_P)\n",
+    "        print('Delta',max(np.abs(del_delta)))\n",
+    "        if max(np.abs(del_delta)) <= tol:\n",
+    "            return b_data_['Delta'] \n",
+    "        elif i == iter-1:\n",
+    "            return b_data_['Delta']\n",
+    "        b_data_.loc[D_P.index, 'Delta'] = b_data_.loc[D_P.index, 'Delta'].values + del_delta\n",
+    "    \n",
+    "\n",
+    "def N_R_Q(df, iter, tol):\n",
+    "    b_data_ = df.copy(deep=True)\n",
+    "    for i in range(iter):\n",
+    "        D_P, D_Q, J1, J4 = Jacobian(b_data, Y_bus())\n",
+    "        del_V = np.linalg.solve(J4, D_Q)\n",
+    "        print('V:',max(np.abs(del_V)))\n",
+    "        if max(np.abs(del_V)) <= tol:\n",
+    "            return b_data_['Vmag']\n",
+    "        elif i == iter-1:\n",
+    "            return b_data_['Vmag']\n",
+    "        b_data_.loc[D_Q.index, 'Vmag'] = b_data_.loc[D_Q.index, 'Vmag'].values + del_V\n",
+    "\n",
+    "def main():\n",
+    "\n",
+    "    # Using ThreadPoolExecutor for parallel execution\n",
+    "    with concurrent.futures.ThreadPoolExecutor() as executor:\n",
+    "        # Submit the sum and product functions to run in parallel\n",
+    "        P_ = executor.submit(N_R_P, b_data, 50, 0.001)\n",
+    "        Q_ = executor.submit(N_R_Q, b_data, 50, 0.001)\n",
+    "\n",
+    "        # Retrieve the results when both calculations are done\n",
+    "        d = P_.result()\n",
+    "        v = Q_.result()\n",
+    "\n",
+    "    # Print the results\n",
+    "    print(d)\n",
+    "    print(v)\n",
+    "    b_data['Delta'] = d\n",
+    "    b_data['Vmag'] = v\n",
+    "\n",
+    "    b_data\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n"
+     ]
     }
    ],
    "source": [
-    "np.radians(0)"
+    "for i in range(30):\n",
+    "    print(i)"
    ]
   },
   {
